# geo-inference

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
examples/: run_geo_inference_with_scripted_model.ipynb  script_model.py
geo_inference/: __init__.py  geo_blocks.py  geo_dask.py  geo_inference.py  geo_inference_dask.py  geo_inference_dask_copy.py
geo_inference/config/: __init__.py  log_config.yaml  logging_config.py  models.yaml  sample.yaml
geo_inference/utils/: __init__.py  geo.py  geo_transforms.py  helpers.py  polygon.py
tests/: test_geo_blocks.py  test_geo_dask.py  test_geo_inference.py
tests/data/: 0_coco.json  0_mask.tif  0_polygons.geojson  0_yolo.csv  gj_to_px_result.geojson  sample.yaml
tests/data/inference/: 0_coco.json  0_mask.tif  0_polygons.geojson  0_yolo.csv  SpaceNet_AOI_2_Las_Vegas.json_coco.json  SpaceNet_AOI_2_Las_Vegas.json_polygons.geojson  SpaceNet_AOI_2_Las_Vegas.json_yolo.csv  dummy_mask.tif  test_mask.tif
tests/data/stac/: SpaceNet_AOI_2_Las_Vegas.json
tests/utils/: test_geo.py  test_geo_transforms.py  test_helpers.py  test_polygon.py
