[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-inference"
version = "2.0.7"
description = "Extract features from geospatial imagery using deep learning models"
readme = "README.md"
authors = [{ name = "Victor Alhassan", email = "victor.alhassan@nrcan-rncan.gc.ca" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["pytorch", "deep learning", "machine learning", "remote sensing", "satellite imagery", "earth observation", "geospatial"]
dependencies = [
    "torchgeo>=0.3",
    "affine>=2.3.0",
    "colorlog==6.7.0",
    "scipy>=1.11.2",
    "pyyaml>=5.2",
    "requests>=2.22.0",
    "pynvml>=11.0",
    "geopandas>=0.10.2"
]

requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/valhassan/geo-inference"

[project.scripts]
geo_inference = "geo_inference.geo_inference:main"

[tool.setuptools.packages.find]
include = ["geo_inference*"]

[tool.bumpver]
current_version = "2.0.7"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"', 
    '^current_version = "{version}"',]
"geo_inference/__init__.py" = ["{version}"]

