[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-inference"
description = "Extract features from geospatial imagery using deep learning models"
readme = "README.md"
authors = [{ name = "Victor Alhassan", email = "victor.alhassan@nrcan-rncan.gc.ca" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["pytorch", "deep learning", "machine learning", "remote sensing", "satellite imagery", "earth observation", "geospatial"]
dynamic = ["dependencies","version",]
requires-python = ">=3.9"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {file = ["VERSION"]}

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/valhassan/geo-inference"

[project.scripts]
geo_inference = "geo_inference.geo_inference:main"

[tool.setuptools.packages.find]
include = ["geo_inference*"]

[tool.bumpver]
current_version = "2.0.7"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"VERSION" = ["{version}"]
"pyproject.toml" = [
    '^current_version = "{version}"',]
"geo_inference/__init__.py" = ["{version}"]